--- a/.github/workflows/basket_craft_extract_load_raw.yml
+++ b/.github/workflows/basket_craft_extract_load_raw.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
         - name: Check out code
-          users: actions/checkout@v3 
+          uses: actions/checkout@v3 
 
         - name: Set up python
           uses: actions/setup-python@v4
